<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepages.LoginLanding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="369dp"
            android:layout_height="97dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="369dp"
            android:layout_height="97dp"
            android:layout_margin="16dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/errorLblLogin"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#DC1616" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="onClick"
            android:text="Login" />

        <Button
            android:id="@+id/signup"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="signupButtonOnClick"
            android:text="Sign Up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>