<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">


    <item
        android:id="@+id/nav_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_profile"
        android:title="Profile" />

    <item
        android:id="@+id/nav_swap"
        android:title="Swap" />

    <item
        android:id="@+id/nav_messages"
        android:title="Messages" />

    <item
        android:id="@+id/nav_logout"
        android:title="Logout" />
</menu>