...
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_frame" />

    <Button
        android:id="@+id/addProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
